# OASIS

./: .Rhistory  .gitignore  Data_Preprints_PsyArXiv_weblike.csv  Data_Preprints_med_socarxiv.csv  Data_Preprints_psyarxiv_elastic.csv  Data_Preprints_py_psyarxiv.csv  Data_Preprints_socarxiv_elastic.csv  Data_Preprints_thesiscommons_elastic.csv  Data_PsyArXiv.csv  Data_PsyArXiv1.csv  Data_PsyArXiv_IBSA.csv  Data_PsyArXiv_SDF.csv  Data_df.csv  OASIS.py  Psy_Scrape.py  Psy_Scrape_PyQt.py  README.md  SDF_PsyArXiv.csv  SystematicReview_Data2_PsyArXiv_weblike.csv  SystematicReview_Data_PsyArXiv_comprehensive.csv  SystematicReview_Data_PsyArXiv_weblike.csv  psyarxiv_results.csv  pyproject.toml  requirements.txt  setup.cfg
.Rproj.user/DCA49A58/pcs/: files-pane.pper
.Rproj.user/DCA49A58/sources/prop/: 47BDFB08  E7962C68  INDEX
.Rproj.user/DCA49A58/sources/session-824ea169/: 71E4F584  71E4F584-contents  856BAB2F  856BAB2F-contents  980D0B0D  980D0B0D-contents
.Rproj.user/shared/notebooks/: paths
.github/workflows/: python-app.yml
OASIS/: README.md  __init__.py  config.py  main.py  ui_main.py  utils.py
OASIS/scrapers/: __init__.py  arxiv_scraper.py  osf_api.py  osf_elastic.py  threads.py
data/: SystematicReview_Data_PsyArXiv_OSF_API.csv  SystematicReview_Data_PsyArXiv_weblike.csv  SystematicReview_Data_SocArXiv_weblike.csv
logs/: OASIS_Log_2025-10-03_07-52-22.txt  OASIS_Log_2025-10-03_07-54-43.txt
tests/: test_OASIS.py  test_unit.py
