[metadata]
name = OASIS
version = 0.0.1
description = OASIS Python package
long_description = file: README.md
long_description_content_type = text/markdown
author = M1V0
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    # add runtime dependencies here, e.g. requests

[options.packages.find]
where = .
exclude =
    tests*
